--- a/fr/papa/2016/2016-06-21-bip-bip/2016-06-21-bip-bip.md
+++ b/fr/papa/2016/2016-06-21-bip-bip/2016-06-21-bip-bip.md
@@ -21,6 +21,6 @@ Je lui retire son "équipement" et lui ordonne de laisser le chat tranquille. Tr
 Quand je suis monté, il était en train de poursuivre le chat et de lui lancer le seul truc humide qu'il avait pu trouver… sa couche.
 
 <figure>
-  <img src="1.gif" alt="Un marcheur en forêt, pris au désarroi, écarte les bras et peste (image animée issue du film Benjamin Gates et le Livre des secrets)" />
+  <img src="/assets/images/papa/2016-06-21/1.gif" alt="Un marcheur en forêt, pris au désarroi, écarte les bras et peste (image animée issue du film Benjamin Gates et le Livre des secrets)" />
   <figcaption><i lang="en">What the fuck?</i></figcaption>
 </figure>
